--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Funiture</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/thu-vien-css.css">
 <link rel="stylesheet" href="css/owl.carousel.css">
@@ -10,6 +10,23 @@
 <link rel="stylesheet" href="css/all.min.css">
 </head>
 
+<header>
+  <div class="container d-flex justify-between">
+    <div class="logo"><a href="index.html"><img src="images/LOGO 1.png" alt="" width="200" height="34" class="my-10 "></a></div>
+    <div class="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+		<li><a href="#">Shop</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+	<i><img src="images/search.png" alt=""></i>
+	<i><img src="images/persona.png" alt=""></i>
+	<i><img src="images/shop.png" alt=""></i>
+</header>
 <body>
 <div class="banner">
   <div class="owl-carousel owl-theme" id="slide">
